sampler/chain/projects/libgdx/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/libgdx/gdx/src/com/badlogic/gdx/scenes/scene2d/ui/Tree.java:451: error: [NullAway] (INDEX= 1116) (Covered) assigning @Nullable expression to @NonNull field
		this.overNode = overNode;
		              ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/libgdx/gdx/src/com/badlogic/gdx/input/RemoteInput.java:324: error: [NullAway] (INDEX= 1459) (Covered) passing @Nullable parameter 'keyEvent' where @NonNull is required
					Gdx.app.postRunnable(new EventTrigger(touchEvent, keyEvent));
					                                                  ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/libgdx/gdx/src/com/badlogic/gdx/graphics/g3d/model/NodeAnimation.java:35: error: [NullAway] (INDEX= 219) (Covered) assigning @Nullable expression to @NonNull field
	public Array<NodeKeyframe<Vector3>> scaling = null;
	                                    ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/libgdx/gdx/src/com/badlogic/gdx/scenes/scene2d/ui/Slider.java:144: error: [NullAway] (INDEX= 1180) (Covered) returning @Nullable expression from method with @NonNull return type
		return style.knobAfter;
		^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/libgdx/gdx/src/com/badlogic/gdx/maps/tiled/BaseTmxMapLoader.java:419: error: [NullAway] (INDEX= 1413) (Covered) passing @Nullable parameter 'null' where @NonNull is required
				String type = property.getAttribute("type", null);
				                                            ^

	(see http://t.uber.com/nullaway )
